[package]
name = "note-porter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json", "blocking"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.107"
simple_logger = "4.2.0"
toml = "0.8.0"
